--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@types/node": "^17.0.42",
+    "@types/react": "^18.0.12",
+    "@types/styled-components": "^5.1.25",
     "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "typescript": "^4.7.3"
   }
 }
